--- a/bin/application/RegistroMascotaPerro.fxml
+++ b/bin/application/RegistroMascotaPerro.fxml
@@ -53,7 +53,7 @@
             </Label>
             <TextField layoutX="160.0" layoutY="290.0" prefHeight="25.0" prefWidth="125.0" />
             <TextField layoutX="160.0" layoutY="338.0" prefHeight="25.0" prefWidth="125.0" />
-            <Button layoutX="151.0" layoutY="462.0" mnemonicParsing="false" onAction="#btnBack" prefHeight="31.0" prefWidth="98.0" text="Back" />
+            <Button layoutX="151.0" layoutY="462.0" mnemonicParsing="false" onAction="#btnBack" prefHeight="31.0" prefWidth="98.0" stylesheets="@application.css" text="Back" />
          </children></Pane>
    </children>
 </AnchorPane>
