--- a/src/application/Inicio.fxml
+++ b/src/application/Inicio.fxml
@@ -1,5 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
@@ -11,21 +17,24 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InicioController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InicioController">
    <children>
       <Pane fx:id="contraseña" prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;">
          <children>
-            <Button layoutX="125.0" layoutY="372.0" mnemonicParsing="false" onAction="#btnInicioSesion" prefHeight="32.0" prefWidth="149.0" text="Iniciar Sesion" />
-            <TextField fx:id="labelUser" layoutX="126.0" layoutY="251.0" promptText="User">
+            <Button layoutX="126.0" layoutY="354.0" mnemonicParsing="false" onAction="#btnInicioSesion" prefHeight="32.0" prefWidth="149.0" style="-fx-border-radius: 50%;" text="Iniciar Sesion" />
+            <TextField fx:id="labelUser" layoutX="114.0" layoutY="250.0" promptText="User" style="-fx-background-color: transparent; -fx-border-color: gray; -fx-border-style: none none solid none;">
                <cursor>
                   <Cursor fx:constant="TEXT" />
-               </cursor></TextField>
-            <Label layoutX="160.0" layoutY="222.0" text="Usuario/Email">
+               </cursor>
+               <font>
+                  <Font size="14.0" />
+               </font></TextField>
+            <Label layoutX="160.0" layoutY="222.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="173.0" layoutY="286.0" text="Password">
+            <Label layoutX="173.0" layoutY="286.0">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
@@ -35,12 +44,15 @@
                   <Image url="@../../../../Downloads/WhatsApp%20Image%202023-04-16%20at%206.45.12%20PM.jpeg" />
                </image>
             </ImageView>
-            <PasswordField fx:id="labelPassword" layoutX="125.0" layoutY="319.0" promptText="Password">
+            <PasswordField fx:id="labelPassword" layoutX="114.0" layoutY="301.0" promptText="Password" style="-fx-border-style: none none solid none; -fx-background-color: transparent; -fx-border-color: gray;">
                <cursor>
                   <Cursor fx:constant="TEXT" />
-               </cursor></PasswordField>
-            <Button layoutX="162.0" layoutY="484.0" mnemonicParsing="false" onAction="#btnRegistro" text="Registrarse" />
-            <Button layoutX="135.0" layoutY="437.0" mnemonicParsing="false" onAction="#btnOlvidoContra" text="Olvido su contraseña" />
+               </cursor>
+               <font>
+                  <Font size="14.0" />
+               </font></PasswordField>
+            <Button layoutX="160.0" layoutY="446.0" mnemonicParsing="false" onAction="#btnRegistro" text="Registrarse" />
+            <Button layoutX="134.0" layoutY="405.0" mnemonicParsing="false" onAction="#btnOlvidoContra" text="Olvido su contraseña" />
          </children>
       </Pane>
    </children>
