--- a/src/application/InicioFinal.fxml
+++ b/src/application/InicioFinal.fxml
@@ -1,5 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.paint.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
@@ -18,7 +26,7 @@
 <?import javafx.scene.paint.Stop?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" style="-fx-border-radius: 12px;" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InicioFinalController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" style="-fx-border-radius: 12px;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.InicioFinalController">
    <children>
       <Pane layoutX="14.0" layoutY="14.0" prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA; -fx-border-color: #FF6D60;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
@@ -36,7 +44,7 @@
                         </Stop>
                         <Stop offset="1.0">
                            <color>
-                              <Color red="0.25" green="0.13310185074806213" blue="0.13310185074806213" />
+                              <Color blue="0.13310185074806213" green="0.13310185074806213" red="0.25" />
                            </color>
                         </Stop>
                      </stops>
@@ -55,7 +63,7 @@
                         <Font name="System Bold" size="12.0" />
                      </font>
                   </Label>
-                  <TextField fx:id="txtUsuario" prefHeight="32.0" prefWidth="300.0" promptText="mypet@gmail.com">
+                  <TextField fx:id="txtUsuario" prefHeight="32.0" prefWidth="300.0" promptText="mypet@gmail.com" style="-fx-background-color: transparent; -fx-border-style: none none solid none; -fx-border-color: gray;">
                      <VBox.margin>
                         <Insets top="5.0" />
                      </VBox.margin>
@@ -68,14 +76,14 @@
                         <Insets top="5.0" />
                      </VBox.margin>
                   </Label>
-                  <StackPane>
+                  <StackPane style="-fx-background-color: transparent;">
                      <children>
-                        <PasswordField fx:id="txtPass" prefHeight="32.0" prefWidth="300.0" promptText="1234">
+                        <PasswordField fx:id="txtPass" prefHeight="32.0" prefWidth="300.0" promptText="1234" style="-fx-background-color: transparent;">
                            <StackPane.margin>
                               <Insets top="5.0" />
                            </StackPane.margin>
                         </PasswordField>
-                        <TextField fx:id="txtPassMask" prefHeight="32.0" prefWidth="300.0" promptText="1234">
+                        <TextField fx:id="txtPassMask" prefHeight="32.0" prefWidth="300.0" promptText="1234" style="-fx-border-color: gray; -fx-border-style: none none solid none; -fx-background-color: transparent;">
                            <StackPane.margin>
                               <Insets top="5.0" />
                            </StackPane.margin></TextField>
