--- a/src/application/MiMascota.fxml
+++ b/src/application/MiMascota.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.image.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -9,29 +14,29 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MiMascotaController">
+<AnchorPane prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MiMascotaController">
    <children>
       <Pane prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="100.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="140.0" layoutY="64.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../OneDrive/Imágenes/paisajeDBZ2.jpg" />
                </image>
             </ImageView>
             <RadioButton layoutX="185.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnElegirMascota1" text="Tobby" />
-            <Button layoutX="65.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnContinuar" prefHeight="35.0" prefWidth="120.0" text="Continuar" />
+            <Button layoutX="69.0" layoutY="448.0" mnemonicParsing="false" onAction="#btnContinuar" prefHeight="35.0" prefWidth="120.0" text="Continuar" />
             <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="129.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true">
                <image>
                   <Image url="@../../../../Downloads/WhatsApp%20Image%202023-04-16%20at%206.45.12%20PM.jpeg" />
                </image>
             </ImageView>
-            <Button layoutX="146.0" layoutY="415.0" mnemonicParsing="false" onAction="#btnAgregarMascota" text="Agregar Mascota" />
+            <Button layoutX="143.0" layoutY="374.0" mnemonicParsing="false" onAction="#btnAgregarMascota" text="Agregar Mascota" />
             <Label layoutX="129.0" layoutY="237.0" text="Tus mascotas" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font name="Goudy Old Style Bold" size="24.0" />
                </font>
             </Label>
-            <Button layoutX="211.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnSalir" prefHeight="35.0" prefWidth="120.0" text="Salir" />
+            <Button layoutX="215.0" layoutY="448.0" mnemonicParsing="false" onAction="#btnSalir" prefHeight="35.0" prefWidth="120.0" text="Salir" />
          </children>
       </Pane>
    </children>
