--- a/src/application/RegistroCuenta.fxml
+++ b/src/application/RegistroCuenta.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
@@ -8,7 +12,7 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroCuentaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroCuentaController">
    <children>
       <Pane prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;">
          <children>
@@ -18,9 +22,9 @@
             <TextField fx:id="txtCorreo" layoutX="183.0" layoutY="244.0" />
             <PasswordField fx:id="txtPass" layoutX="183.0" layoutY="282.0" />
             <PasswordField fx:id="txtPassConfirmed" layoutX="183.0" layoutY="325.0" />
-            <Label layoutX="149.0" layoutY="53.0" text="REGISTRO CUENTA">
+            <Label layoutX="96.0" layoutY="56.0" style="-fx-text-alignment: center;" text="REGISTRO CUENTA">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
             <Label layoutX="84.0" layoutY="125.0" text="Nombre">
