--- a/src/application/RegistroMascota1.fxml
+++ b/src/application/RegistroMascota1.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.ChoiceBox?>
 <?import javafx.scene.control.Label?>
@@ -7,17 +11,17 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroMascota1Controller">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroMascota1Controller">
    <children>
       <Pane prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="111.0" layoutY="123.0" text="REGISTRO MASCOTA">
+            <Label layoutX="115.0" layoutY="118.0" text="REGISTRO MASCOTA">
                <font>
                   <Font name="System Bold" size="18.0" />
                </font>
             </Label>
-            <ChoiceBox fx:id="tipoMascota" layoutX="125.0" layoutY="269.0" prefWidth="150.0" />
-            <Label layoutX="147.0" layoutY="222.0" text="Tipo Mascota">
+            <ChoiceBox fx:id="tipoMascota" layoutX="107.0" layoutY="246.0" prefHeight="27.0" prefWidth="188.0" />
+            <Label layoutX="149.0" layoutY="203.0" text="Tipo Mascota">
                <font>
                   <Font size="18.0" />
                </font>
