--- a/src/application/RegistroMascotaPerro.fxml
+++ b/src/application/RegistroMascotaPerro.fxml
@@ -1,5 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
@@ -7,53 +11,53 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/19" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroMascotaPerroController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="588.0" prefWidth="400.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.RegistroMascotaPerroController">
    <children>
-      <Pane layoutX="49.0" layoutY="80.0" prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <Pane prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;;" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <children>
-            <Label layoutX="114.0" layoutY="25.0" text="Registro Mascota">
+            <Label layoutX="123.0" layoutY="69.0" text="Registro Mascota">
                <font>
                   <Font name="System Bold" size="21.0" />
                </font>
             </Label>
-            <Label layoutX="90.0" layoutY="111.0" prefHeight="17.0" prefWidth="28.0" text="Raza">
+            <Label layoutX="108.0" layoutY="120.0" prefHeight="17.0" prefWidth="28.0" text="Raza">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <Label layoutX="91.0" layoutY="221.0" text="Edad">
+            <Label layoutX="109.0" layoutY="230.0" text="Edad">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <Label layoutX="81.0" layoutY="147.0" text="Nombre">
+            <Label layoutX="99.0" layoutY="156.0" text="Nombre">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <Label layoutX="91.0" layoutY="184.0" text="Peso">
+            <Label layoutX="109.0" layoutY="193.0" text="Peso">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <TextField layoutX="160.0" layoutY="107.0" prefHeight="25.0" prefWidth="125.0" promptText="Beagle" />
-            <TextField layoutX="160.0" layoutY="217.0" prefHeight="25.0" prefWidth="125.0" promptText="11 " />
-            <TextField layoutX="160.0" layoutY="143.0" prefHeight="25.0" prefWidth="125.0" promptText="Tobby" />
-            <TextField layoutX="160.0" layoutY="180.0" prefHeight="25.0" prefWidth="125.0" promptText="10 kg" />
-            <TextField layoutX="160.0" layoutY="253.0" prefHeight="25.0" prefWidth="125.0" promptText="Cafe" />
-            <Label layoutX="90.0" layoutY="257.0" text="Color">
+            <TextField layoutX="178.0" layoutY="116.0" prefHeight="25.0" prefWidth="125.0" promptText="Beagle" />
+            <TextField layoutX="178.0" layoutY="226.0" prefHeight="25.0" prefWidth="125.0" promptText="11 " />
+            <TextField layoutX="178.0" layoutY="152.0" prefHeight="25.0" prefWidth="125.0" promptText="Tobby" />
+            <TextField layoutX="178.0" layoutY="189.0" prefHeight="25.0" prefWidth="125.0" promptText="10 kg" />
+            <TextField layoutX="178.0" layoutY="262.0" prefHeight="25.0" prefWidth="125.0" promptText="Cafe" />
+            <Label layoutX="108.0" layoutY="266.0" text="Color">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font></Label>
-            <Label layoutX="79.0" layoutY="294.0" text="Alimento">
+            <Label layoutX="97.0" layoutY="303.0" text="Alimento">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <Label layoutX="65.0" layoutY="342.0" text="Tipo Alimento">
+            <Label layoutX="83.0" layoutY="351.0" text="Tipo Alimento">
                <font>
                   <Font name="System Bold" size="12.0" />
                </font>
             </Label>
-            <TextField layoutX="160.0" layoutY="290.0" prefHeight="25.0" prefWidth="125.0" />
-            <TextField layoutX="160.0" layoutY="338.0" prefHeight="25.0" prefWidth="125.0" />
-            <Button layoutX="151.0" layoutY="462.0" mnemonicParsing="false" onAction="#btnBack" prefHeight="31.0" prefWidth="98.0" stylesheets="@application.css" text="Back" />
+            <TextField layoutX="178.0" layoutY="299.0" prefHeight="25.0" prefWidth="125.0" />
+            <TextField layoutX="178.0" layoutY="347.0" prefHeight="25.0" prefWidth="125.0" />
+            <Button layoutX="116.0" layoutY="408.0" mnemonicParsing="false" onAction="#btnBack" prefHeight="27.0" prefWidth="154.0" stylesheets="@application.css" text="Back" />
          </children></Pane>
    </children>
 </AnchorPane>
