--- a/bin/application/RegistroCuenta.fxml
+++ b/bin/application/RegistroCuenta.fxml
@@ -12,15 +12,15 @@
    <children>
       <Pane prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;">
          <children>
-            <TextField fx:id="txtNombre" layoutX="183.0" layoutY="121.0" />
-            <TextField fx:id="txtApellido" layoutX="183.0" layoutY="160.0" />
-            <TextField fx:id="txtCelular" layoutX="183.0" layoutY="201.0" />
-            <TextField fx:id="txtCorreo" layoutX="183.0" layoutY="244.0" />
-            <PasswordField fx:id="txtPass" layoutX="183.0" layoutY="282.0" />
-            <PasswordField fx:id="txtPassConfirmed" layoutX="183.0" layoutY="325.0" />
-            <Label layoutX="149.0" layoutY="53.0" text="REGISTRO CUENTA">
+            <TextField fx:id="txtNombre" layoutX="183.0" layoutY="121.0" promptText="Name" />
+            <TextField fx:id="txtApellido" layoutX="183.0" layoutY="160.0" promptText="last Name" />
+            <TextField fx:id="txtCelular" layoutX="183.0" layoutY="201.0" promptText="3111234567" />
+            <TextField fx:id="txtCorreo" layoutX="183.0" layoutY="244.0" promptText="mybestpet@mypet.com" />
+            <PasswordField fx:id="txtPass" layoutX="183.0" layoutY="282.0" promptText="Apass1234" />
+            <PasswordField fx:id="txtPassConfirmed" layoutX="183.0" layoutY="325.0" promptText="Apass1234" />
+            <Label layoutX="96.0" layoutY="56.0" style="-fx-text-alignment: center;" text="REGISTRO CUENTA">
                <font>
-                  <Font name="System Bold" size="12.0" />
+                  <Font name="System Bold" size="24.0" />
                </font>
             </Label>
             <Label layoutX="84.0" layoutY="125.0" text="Nombre">
@@ -55,6 +55,11 @@
             </Label>
             <Button layoutX="64.0" layoutY="412.0" mnemonicParsing="false" onAction="#btnCrearCuenta" prefHeight="48.0" prefWidth="125.0" text="Crear Cuenta" />
             <Button layoutX="217.0" layoutY="412.0" mnemonicParsing="false" onAction="#btnBack" prefHeight="48.0" prefWidth="125.0" text="Back" />
+            <Label fx:id="labelCuentaCreada" alignment="CENTER" layoutX="50.0" layoutY="490.0" prefHeight="48.0" prefWidth="303.0">
+               <font>
+                  <Font name="High Tower Text" size="12.0" />
+               </font>
+            </Label>
          </children>
       </Pane>
    </children>
