--- a/src/application/MiMascota.fxml
+++ b/src/application/MiMascota.fxml
@@ -13,25 +13,25 @@
    <children>
       <Pane prefHeight="588.0" prefWidth="400.0" style="-fx-background-color: #98D8AA;">
          <children>
-            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="100.0" layoutY="91.0" pickOnBounds="true" preserveRatio="true">
+            <ImageView fitHeight="150.0" fitWidth="200.0" layoutX="100.0" layoutY="67.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../OneDrive/Imágenes/paisajeDBZ2.jpg" />
+                  <Image url="@../img/Logo.png" />
                </image>
             </ImageView>
-            <RadioButton layoutX="185.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnElegirMascota1" text="Tobby" />
-            <Button layoutX="65.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnContinuar" prefHeight="35.0" prefWidth="120.0" text="Continuar" />
-            <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="129.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true">
+            <RadioButton layoutX="173.0" layoutY="294.0" mnemonicParsing="false" onAction="#btnElegirMascota1" text="Tobby" />
+            <Button layoutX="69.0" layoutY="448.0" mnemonicParsing="false" onAction="#btnContinuar" prefHeight="35.0" prefWidth="120.0" text="Continuar" />
+            <ImageView fitHeight="47.0" fitWidth="47.0" layoutX="125.0" layoutY="279.0" pickOnBounds="true" preserveRatio="true">
                <image>
-                  <Image url="@../../../../Downloads/WhatsApp%20Image%202023-04-16%20at%206.45.12%20PM.jpeg" />
+                  <Image url="@../img/Tobby.png" />
                </image>
             </ImageView>
-            <Button layoutX="146.0" layoutY="415.0" mnemonicParsing="false" onAction="#btnAgregarMascota" text="Agregar Mascota" />
+            <Button layoutX="143.0" layoutY="374.0" mnemonicParsing="false" onAction="#btnAgregarMascota" text="Agregar Mascota" />
             <Label layoutX="129.0" layoutY="237.0" text="Tus mascotas" textOverrun="CENTER_ELLIPSIS">
                <font>
                   <Font name="Goudy Old Style Bold" size="24.0" />
                </font>
             </Label>
-            <Button layoutX="211.0" layoutY="499.0" mnemonicParsing="false" onAction="#btnSalir" prefHeight="35.0" prefWidth="120.0" text="Salir" />
+            <Button layoutX="215.0" layoutY="448.0" mnemonicParsing="false" onAction="#btnSalir" prefHeight="35.0" prefWidth="120.0" text="Salir" />
          </children>
       </Pane>
    </children>
